--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -15,6 +15,21 @@
 	year = "2016"
 }
 
+@article{csillery2010approximatebayesiancomputationabcinpractice,
+	abstract = "Understanding the forces that influence natural variation within and among populations has been a major objective of evolutionary biologists for decades. Motivated by the growth in computational power and data complexity, modern approaches to this question make intensive use of simulation methods. Approximate Bayesian Computation (ABC) is one of these methods. Here we review the foundations of ABC, its recent algorithmic developments, and its applications in evolutionary biology and ecology. We argue that the use of ABC should incorporate all aspects of Bayesian data analysis: formulation, fitting, and improvement of a model. ABC can be a powerful tool to make inferences with complex models if these principles are carefully applied.",
+	author = "Csill{\'e}ry, Katalin and Blum, Michael G.B. and Gaggiotti, Oscar E. and Fran\c{c}ois, Olivier",
+	doi = "10.1016/j.tree.2010.04.001",
+	issn = "0169-5347",
+	journal = "Trends in Ecology \& Evolution",
+	localfile = "../pdfs/csillery2010approximatebayesiancomputationabcinpractice.pdf",
+	number = "7",
+	pages = "410--418",
+	title = "{Approximate Bayesian Computation (ABC) in practice}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0169534710000662",
+	volume = "25",
+	year = "2010"
+}
+
 @article{blum2013acomparativereviewofdimensionreductionmethodsinapproximatebayesiancomputation,
 	author = "Blum, M. G. B. and Nunes, M. A. and Prangle, D. and Sisson, S. A.",
 	doi = "10.1214/12-STS406",
@@ -29,6 +44,22 @@
 	url = "https://doi.org/10.1214/12-STS406",
 	volume = "28",
 	year = "2013"
+}
+
+@article{toni2009approximatebayesiancomputationschemeforparameterinferenceandmodelselectionindynamicalsystems,
+	abstract = "Approximate Bayesian computation (ABC) methods can be used to evaluate posterior distributions without having to calculate likelihoods. In this paper, we discuss and apply an ABC method based on sequential Monte Carlo (SMC) to estimate parameters of dynamical models. We show that ABC SMC provides information about the inferability of parameters and model sensitivity to changes in parameters, and tends to perform better than other ABC approaches. The algorithm is applied to several well-known biological systems, for which parameters and their credible intervals are inferred. Moreover, we develop ABC SMC as a tool for model selection; given a range of different mathematical descriptions, ABC SMC is able to choose the best model using the standard Bayesian model selection apparatus.",
+	author = "Toni, Tina and Welch, David and Strelkowa, Natalja and Ipsen, Andreas and Stumpf, Michael P.H",
+	doi = "10.1098/rsif.2008.0172",
+	eprint = "http://rsif.royalsocietypublishing.org/content/6/31/187.full.pdf",
+	issn = "1742-5689",
+	journal = "Journal of The Royal Society Interface",
+	number = "31",
+	pages = "187--202",
+	publisher = "The Royal Society",
+	title = "{Approximate Bayesian computation scheme for parameter inference and model selection in dynamical systems}",
+	url = "http://rsif.royalsocietypublishing.org/content/6/31/187",
+	volume = "6",
+	year = "2009"
 }
 
 @article{boyd2009votingwithyourfeetpayoffbiasedmigrationandtheevolutionofgroupbeneficialbehavior,
@@ -90,7 +121,7 @@
 }
 
 @article{kendal2009theevolutionofsociallearningrulespayoffbiasedandfrequencydependentbiasedtransmission,
-	author = "Kendal, Jeremy and Giraldeau, Luc-Alain and Laland, Kevin",
+	author = "Kendal, Jeremy and Giraldeau, Luc-Alain and Laland, Kevin N.",
 	doi = "10.1016/j.jtbi.2009.05.029",
 	issn = "0022-5193",
 	journal = "Journal of Theoretical Biology",
@@ -284,7 +315,7 @@
 
 @article{laland2016anintroductiontonicheconstructiontheory,
 	abstract = "Niche construction refers to the modification of selective environments by organisms. Theoretical and empirical studies of niche construction are increasing in importance as foci in evolutionary ecology. This special edition presents theoretical and empirical research that illustrates the significance of niche construction to the field. Here we set the scene for the following papers by (1) discussing the history of niche construction research, (2) providing clear definitions that distinguish niche construction from related concepts such as ecosystem engineering and the extended phenotype, (3) providing a brief summary of the findings of niche construction research, (4) discussing the contribution of niche construction and ecological inheritance to (a) expanded notions of inheritance, and (b) the extended evolutionary synthesis, and (5) briefly touching on some of the issues that underlie the controversies over niche construction.",
-	author = "Laland, Kevin and Matthews, Blake and Feldman, Marcus W.",
+	author = "Laland, Kevin N. and Matthews, Blake and Feldman, Marcus W.",
 	doi = "10.1007/s10682-016-9821-z",
 	issn = "1573-8477",
 	journal = "Evolutionary Ecology",
@@ -2285,7 +2316,7 @@
 
 @article{rendell2010whycopyothersinsightsfromthesociallearningstrategiestournament,
 	abstract = "Social learning (learning through observation or interaction with other individuals) is widespread in nature and is central to the remarkable success of humanity, yet it remains unclear why copying is profitable and how to copy most effectively. To address these questions, we organized a computer tournament in which entrants submitted strategies specifying how to use social learning and its asocial alternative (for example, trial-and-error learning) to acquire adaptive behavior in a complex environment. Most current theory predicts the emergence of mixed strategies that rely on some combination of the two types of learning. In the tournament, however, strategies that relied heavily on social learning were found to be remarkably successful, even when asocial information was no more costly than social information. Social learning proved advantageous because individuals frequently demonstrated the highest-payoff behavior in their repertoire, inadvertently filtering information for copiers. The winning strategy (discountmachine) relied nearly exclusively on social learning and weighted information according to the time since acquisition.",
-	author = "Rendell, L. and Boyd, R. and Cownden, D. and Enquist, M. and Eriksson, K. and Feldman, M. W. and Fogarty, L. and Ghirlanda, S. and Lillicrap, T. and Laland, K. N.",
+	author = "Rendell, L. and Boyd, R. and Cownden, D. and Enquist, M. and Eriksson, K. and Feldman, M. W. and Fogarty, L. and Ghirlanda, S. and Lillicrap, T. and Laland, Kevin N.",
 	doi = "10.1126/science.1184719",
 	eprint = "http://science.sciencemag.org/content/328/5975/208.full.pdf",
 	issn = "0036-8075",
@@ -2397,15 +2428,46 @@
 }
 
 @article{bentley2005Specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork,
-    title = "Specialisation and wealth inequality in a model of a clustered economic network",
-    journal = "Journal of Archaeological Science",
-    volume = "32",
-    number = "9",
-    pages = "1346 - 1356",
-    year = "2005",
-    issn = "0305-4403",
-    doi = "https://doi.org/10.1016/j.jas.2005.03.008",
-    url = "http://www.sciencedirect.com/science/article/pii/S0305440305000725",
-    author = "R. Alexander Bentley and Mark W. Lake and Stephen J. Shennan",
-    keywords = "Agent-based modelling, Complex networks, Exchange, Kin networks, Mesolithic-Neolithic transition, Power laws, Prehistoric trade, Wealth inequality, Social networks"
+	author = "Bentley, R. Alexander and Lake, Mark W. and Shennan, Stephen J.",
+	doi = "10.1016/j.jas.2005.03.008",
+	issn = "0305-4403",
+	journal = "Journal of Archaeological Science",
+	keywords = "Agent-based modelling; Complex networks; Exchange; Kin networks; Mesolithic-Neolithic transition; Power laws; Prehistoric trade; Wealth inequality; Social networks",
+	number = "9",
+	pages = "1346--1356",
+	title = "{Specialisation and wealth inequality in a model of a clustered economic network}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0305440305000725",
+	volume = "32",
+	year = "2005"
 }
+
+@article{leuenberger2010bayesiancomputationandmodelselectionwithoutlikelihoods,
+	abstract = "Until recently, the use of Bayesian inference was limited to a few cases because for many realistic probability models the likelihood function cannot be calculated analytically. The situation changed with the advent of likelihood-free inference algorithms, often subsumed under the term approximate Bayesian computation (ABC). A key innovation was the use of a postsampling regression adjustment, allowing larger tolerance values and as such shifting computation time to realistic orders of magnitude. Here we propose a reformulation of the regression adjustment in terms of a general linear model (GLM). This allows the integration into the sound theoretical framework of Bayesian statistics and the use of its methods, including model selection via Bayes factors. We then apply the proposed methodology to the question of population subdivision among western chimpanzees, Pan troglodytes verus.",
+	author = "Leuenberger, Christoph and Wegmann, Daniel",
+	doi = "10.1534/genetics.109.109058",
+	eprint = "http://www.genetics.org/content/184/1/243.full.pdf",
+	issn = "0016-6731",
+	journal = "Genetics",
+	localfile = "../pdfs/leuenberger2010bayesiancomputationandmodelselectionwithoutlikelihoods.pdf",
+	number = "1",
+	pages = "243--252",
+	publisher = "Genetics",
+	title = "{Bayesian Computation and Model Selection Without Likelihoods}",
+	url = "http://www.genetics.org/content/184/1/243",
+	volume = "184",
+	year = "2010"
+}
+
+@article{toni2010simulationbasedmodelselectionfordynamicalsystemsinsystemsandpopulationbiology,
+	author = "Toni, Tina and Stumpf, Michael P. H.",
+	doi = "10.1093/bioinformatics/btp619",
+	eprint = "/oup/backfile/content\_public/journal/bioinformatics/26/1/10.1093\_bioinformatics\_btp619/2/btp619.pdf",
+	journal = "Bioinformatics",
+	number = "1",
+	pages = "104--110",
+	title = "{Simulation-based model selection for dynamical systems in systems and population biology}",
+	url = "http://dx.doi.org/10.1093/bioinformatics/btp619",
+	volume = "26",
+	year = "2010"
+}
+
