add some draft plan and notes

--- a/doc/thesis/2018_draftplan.tex
+++ b/doc/thesis/2018_draftplan.tex
@@ -7,7 +7,7 @@
 %\usepackage{luatextra}
 \usepackage{fontspec}
 %Ligatures={Contextual, Common, Historical, Rare, Discretionary}
-\setmainfont[Mapping=tex-text]{Apple Garamond}
+%\setmainfont[Mapping=tex-text]{Apple Garamond}
 %%First draft of a research proposal
 
 \usepackage{natbib}
@@ -21,66 +21,93 @@
 
 
 \subsection*{Simon Carrignon}
-\subsection*{\\ PLAN DRAFT}
+\subsection*{\\ Draft of Title: Social Change and Content Bias, a large scale analysis}
 
+\subsubsection*{Draft of a kind of subtitle: A model based approach to understand what is the impact of the content of what human exchange socially on large scale cultural change}
 
+\subsection*{\\ DRAFT of PLAN:}
 \begin{enumerate}
-    \item Cultural evolution
+    \item Introduction
         \begin{enumerate}
-            \item Evolutionary biology
+            \item Cultural Evolution (from darwin to Cultural Evolution theory)
                 \begin{enumerate}
-                    \item History
-                    \item Methods
+                    \item Evolutionary biology (Section 1 of Master tesis philosophy of science)
+                        \begin{enumerate}
+                            \item History (darwin,, mendel, modern synthesis, critics of modernr synthesis and adaptationist)
+                            \item Methods and problems (darwin need for artificial evolution and thought experiment, probel of `` how to prove NAtural selection'', problem of 
+                        \end{enumerate}
+                    \item How to study society and their evolution?
+                        \begin{enumerate}
+                            \item History
+                            \item Cultural Evolution
+                            \item Social Learning Strategies 
+                        \end{enumerate}
                 \end{enumerate}
-            \item Methods
-            \item Social Transmission
+            \item Cultural Transmission \& Bias
+                \begin{itemize}
+                    \item Social Learning Strategies
+                    \item Critics toward transmission/imitation centered theories: Cognitivies attractors (Morin 2015) page 99 chapitre 3: The Myth of compulsive imitation
+                        To solve that: intrinsic appeal
+                    \item Need to study more complex strategies and more precisely (Kandler crtics on random mnidek)
+                \end{itemize}
+                We face a problem: to study long term changes relying on complex cognitives transmission. How one can track on using the other? General simple models are good and quick but as mentionned by the critics need to be refined.
+            \item Model and Model Selection (\emph{ie} how to study previous section)
+                \begin{itemize}
+                    \item Agent Base Modeling (Section 2 of master in philosophy of science \cite{carrignon2016modelandsimulaion}): 
+                        \\ With practical example from paper published between 2015 and 2018? \cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult},\cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}\cite{medernach2016evolution})
+                    \item Bayesian Inference (TRAJ paper section on baeysian inference)
+                \end{itemize}
         \end{enumerate}
-    \item Simulation
+    \item Case study 1: The limit of context dependant bias, a bayesian approach to online social media
         \begin{itemize}
-            \item AGENT BASE MODEL
-            \item LINK WITH DATA => ABC
+            \item Simple context model (random neutral model, conformity and other frequency based bias)
+            \item a case study with 10 years of online social media (paper with Bentley and Ruck \cite{carrignon2018})
+
         \end{itemize}
-    \item Undirect CONTENT DEPENDANT BIAS
-        \begin{itemize}
-            \item JERASH BIAS
-        \end{itemize}
-    \item content vs context dependan
+        Some reflexion: chains of transmission \emph{are} wide. As imaginaned by Morin, p140
+    \item  Case study 2: 'Meta Content': Economy and undirect access to content via success bias
         \begin{enumerate}
-            \item TWITTER
+            \item Agent based model integrate Social Learning Stragies with economic changes, a theoretical exploration (Winter Simulation Conference paper \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties})
+            \item Historical case study JERASH and ABC (paper with Tom and Isa \cite{carrignon2018abmtrac})
         \end{enumerate}
-    \item CONCLUSION
+    \item Conclusion
        
 \end{enumerate}
 
-This PhD is fully funded and part of the Economy and Political Network project (EPNet - ERC 340828 ), whose general objective is :
-\begin{quote}
-	``[\ldots]to investigate the political and economical mechanisms that characterised the dynamics of the commercial trade system during the Roman Empire.''
-\end{quote}
-To attain this objective the project want to propose a new and innovative framework that bring together evolutionary thinking, economics, history and archaeology to study the evolution of the economical and cultural dynamics during the Roman Empire. 
-
-Within this framework, the thesis will investigate the conditions of the emergence of a free market in a pre-industrial context. To do so we will take the Roman Empire as a case study and apply actual economical model to Mediterranean historical context in order to see if this context allow a free market to evolve or not. The study will focus on the evolution of such system, when submitted to evolutionary cultural dynamics (such as random copy or learning of economical policies, imitation of the most successful individual, \ldots).
-
-
+%
+%\pagebreak
+%
+%
+%\section{random draft}
+%This PhD is fully funded and part of the Economy and Political Network project (EPNet - ERC 340828 ), whose general objective is :
+%\begin{quote}
+%	``[\ldots]to investigate the political and economical mechanisms that characterised the dynamics of the commercial trade system during the Roman Empire.''
+%\end{quote}
+%To attain this objective the project want to propose a new and innovative framework that bring together evolutionary thinking, economics, history and archaeology to study the evolution of the economical and cultural dynamics during the Roman Empire. 
+%
+%Within this framework, the thesis will investigate the conditions of the emergence of a free market in a pre-industrial context. To do so we will take the Roman Empire as a case study and apply actual economical model to Mediterranean historical context in order to see if this context allow a free market to evolve or not. The study will focus on the evolution of such system, when submitted to evolutionary cultural dynamics (such as random copy or learning of economical policies, imitation of the most successful individual, \ldots).
+%
+%
 %To test those hypothesis we want to build a model using historical and archaeological evidences as well as other model already built by economists, people from game theory, evolutionary biology and evolutionary archaeology and cultural evolution. The model will offer the possibility to test different hypothesis about the nature and the evolution of those exchange and will rest on quantitative historical and archaeological evidence to calculate and determine a degree of accuracy of this hypothesis.
-
-The goal of the thesis is to investigate an old debate in history and archaeology, which is to understand in what extent the roman economy was a fully integrated free market economy, or a heterogeneous network of small independent economics loosely connected, knowing the predominant role and control of the Roman Empire on this economy. 
- 
-In the same time the thesis will illustrate the viability of bringing together economical model and cultural evolution into computer simulation in order to test hypothesis about such a complex past process that is the Roman Economy, which is difficult to study other way due to a lack of data and remaining knowledge. Cultural evolution and economical model give us ways to extrapolates those missing or erroneous data, while computer simulation allows us to integrate crucial spacial and behavioral specificities to better understand the historical process.
-
+%
+%The goal of the thesis is to investigate an old debate in history and archaeology, which is to understand in what extent the roman economy was a fully integrated free market economy, or a heterogeneous network of small independent economics loosely connected, knowing the predominant role and control of the Roman Empire on this economy. 
+% 
+%In the same time the thesis will illustrate the viability of bringing together economical model and cultural evolution into computer simulation in order to test hypothesis about such a complex past process that is the Roman Economy, which is difficult to study other way due to a lack of data and remaining knowledge. Cultural evolution and economical model give us ways to extrapolates those missing or erroneous data, while computer simulation allows us to integrate crucial spacial and behavioral specificities to better understand the historical process.
+%
 %To answer this problem, the main idea will be to build an Agent-based model that integrate economical hypothesis and cultural evolution assumption to study the evolution of cultural and economical exchange in the Roman Empire.
-
+%
 %An Agent-Based model upon which all follow experiment will be done has already been developed to serve as a theoretical proof of concept, leading to a conference presentation in (WSC ?) and is build using the Multi-Agent platform Pandora \citep{rubio2014pandora}.
-
-
-The first step of the research will consist on a theoretical exploration, to understand which cultural and economical dynamics lead to which type of economical system (centralized economy, free market or heterogeneous economy) given different geographical, demographics and political context.
-
-In a second time, the thesis will use evolutionary archaeological tools and all available data to choose the more probable scenario among those previously explored and adjust them using the result of the data analysis.
-
-To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from the Complex System Lab and Xavier Rubio from the Barcelona Supercomputing Center, thus it will benefit the expertise of their associated lab on modeling and analysing complex adaptive systems. Moreover it will rely on all team already engaged in the EPNet project, which include the other members of the team in the Barcelona Supercomputer Center where the theoretical model is already under development, the CEIPAC laboratory, specialised in Ancient History and the Roman Empire, and the PhysComp laboratory, specialised in network an big data analysis.
-
+%
+%
+%The first step of the research will consist on a theoretical exploration, to understand which cultural and economical dynamics lead to which type of economical system (centralized economy, free market or heterogeneous economy) given different geographical, demographics and political context.
+%
+%In a second time, the thesis will use evolutionary archaeological tools and all available data to choose the more probable scenario among those previously explored and adjust them using the result of the data analysis.
+%
+%To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from the Complex System Lab and Xavier Rubio from the Barcelona Supercomputing Center, thus it will benefit the expertise of their associated lab on modeling and analysing complex adaptive systems. Moreover it will rely on all team already engaged in the EPNet project, which include the other members of the team in the Barcelona Supercomputer Center where the theoretical model is already under development, the CEIPAC laboratory, specialised in Ancient History and the Roman Empire, and the PhysComp laboratory, specialised in network an big data analysis.
+%
 %In the following paragraphs we will quickly argue why we choose Agent-Based Modeling and how we will position it in regards to evolutionary process and evolutionary thinking. Then we will propose some economical approach that we think promising in our context and with our approach, and we will finish explaining how we will articulate the model with archaeological and historical studies.
-%
-%
+%%
+%%
 %\section{Simulation and Agent Based Modelling}
 %Since the 90s, the use of Simulation and Agent-Based Modeling (ABM) in Science is inexorably growing. One can observe that not only by the amount of published papers using ABM, but moreover through the different fields of study those publication encompass, ranging from Ecology \citep{grimm2005individual} to Social Sciences in general \citep{epstein1996growingartificialsocietiessocialsciencefromthebottomup} with Economy \citep{tesfatsion2006agentbasedcomputationaleconomicsaconstructiveapproachtoeconomictheory} or Archaeology \citep{wurzer2015agentbasedmodelingandsimulationinarchaeology} in particular.
 %
@@ -165,13 +192,11 @@ To succeed in those tasks the PhD will be co-supervised by Sergí Valverde from 
 %
 %Using data coming from advanced research in archaeology and history done by the CEIPAC laboratory, the PhD will focused on building computer simulation where economical model, evolutionary process and historical knowledge are bind, to study the evolution of the Economy in the Roman Empire. The goal of the thesis is to explore the historical context allowing the evolution or not of a decentralized, fully integrated free market and to compare this context and its evolution with what we know about the Roman Empire market. Moreover, this study will  show the suitability of the approach to study past economy as a Complex Adaptive System using computer simulation.
 %
-%
-%
-%\bibliographystyle{apalike}
+
+
+\bibliographystyle{apalike}
 %\bibliography{/home/scarrign/Documents/biblio/bib/phd,/home/scarrign/Documents/biblio/bib/memoireLophiss}  
-	\begin{center}
-		\includegraphics[width=7cm]{logo}
-	\end{center}
+\bibliography{../biblio/bib/SimonCarrignon.bib}
 \end{document}
 
 
