--- a/doc/administrative_doc/CV/lettersmall.tex
+++ b/doc/administrative_doc/CV/lettersmall.tex
@@ -29,13 +29,13 @@
 
 \vspace{-.5cm}
 
-Throughout my studies I followed an interdisciplinary path, studying Biology, Computer Science, as well as Cognitives sciences, History and Philosophy of Science to end up doing a PhD where I apply Cultural Evolution to study large scale social and economic changes. Meanwhile I worked  in various laboratories, on fields as various as Philogenetic, Neuroscience, Psychology, Evolutionary Robotics or Philosophy of Sciences. The general scientific question that motivate me are : 
+Throughout my studies I followed an interdisciplinary path, studying Biology, Computer Science, as well as Cognitives sciences, History and Philosophy of Science to end up doing a PhD where I apply Cultural Evolution to study large scale social and economic changes. Meanwhile I worked  in various laboratories, on fields as various as Philogenetic, Neuroscience, Psychology, Evolutionary Robotics or Philosophy of Sciences. The general scientific questions that motivate me are : 
 \begin{itemize}
     \item How various systems made of simple interacting elements can, based on few rules and without supervision, diversify, adapt and change themselves as well as their environment?
     \item What are the links between human production (languages, technologies, social organization, computer abstractions) and natural systems? 
     \item If we can use artificial tools to understand the complexity of natural systems, is it only a coincidence or does it reflect something more profound on the nature of both things?
 \end{itemize}
-Those questions are abstract and answer them is probably unrealistic but following them during the past 8 years, led me to various publications where I studied: cooperation \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}, division of labor and specialisation\cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}, trade in past society \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, evolution of lichens \cite{carrignon2016lichen} or even purely theoretical evolutionary dynamics \cite{medernach2015evolutionary,medernach2016evolution}.
+Those questions are abstract and answer them may sound unrealistic, but following them during the past 8 years, led me to various publications where I studied: cooperation \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}, division of labor and specialisation\cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}, trade in past society \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, evolution of lichens \cite{carrignon2016lichen} or even purely theoretical evolutionary dynamics \cite{medernach2015evolutionary,medernach2016evolution}.
 
 
 In general those studies remained mainly theoretical. How to make the link between them and the real system has always been a challenging source of reflection for me.  How to do it? How to justify it? Does it have a sense to try it? This is why I did a  master in History and Philosophy of Science, where I wrote a thesis on ``Evolutionary Robotics as a model to study Biology of Evolution''. Since then, I try to keep my work as tightly linked to data as possible. As I learnt during my PhD this don't add a layer of complexity. In fact, it often simplifies the modeling and analysis activity. The main difficulty to keep model linked with reality, is to deeply understand the system of study and to work closely with the specialists. This is the only way to formulate meaningful hypotheses that make sens both as research questions within the field studied and as system that can be modeled and tested using computers. But following that, the modeling \emph{per se} becomes easier, and the analysis straightforward. 
@@ -48,7 +48,7 @@ Using that method, and thanks to highly qualified Archaeologists, Historians and
 
 I have now a good experience on using computer models to explore various range of phenomena that cannot be tested through experimental or analytical exploration. I rely on evolutionary theories as a general framework within which implement and interpret those models, and Bayesian Inference to statistically test, compare and select them given known datasets and evidences.
 
-If evolutionary biology is already successfully using this framework, much more has to be done in Humanities and Social Sciences. The potential of applications is huge. I have various ongoing project that I  could be seen   during my PhD that I want to follow during the coming years.
+If evolutionary biology is already successfully using this framework, much more has to be done in Humanities and Social Sciences. The potential of applications is huge. I have various ongoing project started during my PhD that I want to follow during the coming years.
 
 One started with the digitalisation and analyse of a new dataset on the industrialization of Europe before the World War I. We presented the first results here \cite{carrignon2016patternsinglobalization}, and we hope to successfully use the framework I described to show how globalization was one of the drivers of industrialization of Europe and how it ultimately led to war (I'll join our working paper on that with my application form).
 
