add research staty in CV

--- a/doc/administrative_doc/CV/cv_scholar2019.tex
+++ b/doc/administrative_doc/CV/cv_scholar2019.tex
@@ -79,7 +79,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Experience \Huge}
 \subsection{Professional}
-\cventry{June 2018}{Visiting Scholar }{NIMBIOS-University of Tennessee}{Knoxville, USA}{}{One month visiting scholar with professor Alex Bentley. Development of models of spread of information on online social media. Validation of the models against datasets using Approximate Bayesian Computation. R-package and vignette available: \href{https://github.com/simoncarrignon/twitter-spread}{github.com/simoncarrignon/twitter-spread}}
 \cventry{Jan. 2010--Mar. 2012}{Research engineer }{LUTIN-Université Paris 8}{Paris, France}{}{1 week to 3 months short contracts: modeling, data processing \& statistical analysis. Some selected outcome:
 \begin{itemize}
 	\item ACACIA Coop: a Netlogo program to explore the worth of altruistic behaviors in swarm of autonomous agent~(\href{https://github.com/simoncarrignon/acacia-coop}{@git})
@@ -90,6 +89,12 @@
 	\newline{} Elementary notions of algorithmic and databases manipulation (w/ Foxpro).}%
 \cventry{Sept. 2010--Jan. 2012}{Junior Lecturer (Chargé de cours)}{Université Paris 8}{Paris, France}{}{Course for undergraduate students (License Students). Total amount of teaching: 144hr. 
 \newline{}C2I course -- teaching of office tools (open source version of Word,Excel,PPT) \& general knowledge of computers (software/hardware/network). }%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{.2cm}
+\subsection{Research Stay}
+\cventry{June 2018}{Visiting Scholar}{NIMBIOS-University of Tennessee}{Knoxville, USA}{}{One month visiting scholar with professor Alex Bentley. Development of models of spread of information on online social media. Validation of the models against datasets using Approximate Bayesian Computation. R-package and vignette available:~\href{https://framagit.org/sc/twitter-spread}{@git}}
+\cventry{May 2010}{Visiting Student}{LORIA}{Nancy, France}{}{One week stay in the team of Olivier Simonin. Work on the asservisment of Khepera III robot + learning and adapting a system of a greyscale color floor system to guide the robot.}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{.2cm}
 \subsection{Internship}
@@ -142,7 +147,7 @@ Intensive 4 weeks series of lectures, labs, and discussion sessions focusing on 
 \cvitem{Programming}{C/C++, R, Bash, Python, (Java, Php).}{}{}
 \cvitem{Parallel Computing}{MPI (R/C/C++/Python), SLURM, LSF.}{}{}
 \cvitem{Statistical analysis/Visualing}{R, Excel, Matlab.}{}{}
-\cvitem{Git}{Personal repository \href{https://github.com/simoncarrignon/}{github.com/simoncarrignon}}{}{}
+\cvitem{Git}{Personal repositories \href{https://github.com/simoncarrignon/}{@github.com} \& \href{https://framagit.org/sc/}{@framagit (gitlab)}}{}{}
 
 %\section{Works}
 %\begin{itemize}
