--- a/doc/administrative_doc/CV/letterToFloreano.tex
+++ b/doc/administrative_doc/CV/letterToFloreano.tex
@@ -14,9 +14,9 @@
 \usepackage[scale=0.75]{geometry}
 
 \definecolor{grey}{gray}{0.6}
-\title{\textcolor{grey}{\Large Research Interest and Projects}\\
+\title{\textcolor{grey}{\Large Cover Letter}\\
 \vspace{-.25cm}
-{ \normalsize Simon Carrignon (October 2018)}}
+{ \normalsize Simon Carrignon (January 2019)}}
 \author{}
 \date{}
 
@@ -29,74 +29,55 @@
 
 \vspace{-.5cm}
 
-Throughout my studies, from my very beginning at the university to my actual PhD, I always managed to follow an interdisciplinary path, mixing computer sciences with evolutionary biology, cognitive sciences, philosophy of science, history and archaeology. This interest in multi-disciplinarity started long before entering the University. Young I witnessed the arrival of personal desktop in most families, and as soon as we got one in mine, I started to be amazed by the ability of numeric artifacts (screensavers, games, internet,\ldots) to exhibit ‘life-like’ and ‘human-like’ behaviors. 
-It was as if, by finding the right combination of instructions, it began possible to recreate, within the small square of the screen, the complexity of a wide variety of things surrounding us, from livings beings to social phenomena.
+Throughout my studies, from my very beginning at the university to my actual PhD, I always managed to follow an interdisciplinary path, mixing Computer Sciences with Evolutionary Biology, Cognitive Sciences and History \& Philosophy of Science. This interest in multi-disciplinarity started long before entering the University when I witnessed the arrival of personal desktop in most families. As soon as we got one in mine, I was amazed by the ability of numeric artifacts (games, internet,\ldots) to exhibit ‘life-like’ behaviors. 
+It was as if, by finding the right combination of instructions, it was possible to recreate, within the small square of the screen, the complexity of the living things and social phenomena that surround us.
 
-I became determined that I wanted to find this 'right combination of instructions'. To do so, I knew that I will need to understand the actual rules of those living things that surround us, as well as how to program their artificial counterparts.  Since then, all the courses I chose, the schools I went, the master and internships I did, went in that direction. This led me to study Biology, Computer Science, as well as Cognitives sciences, History and Philosophy of Science and to finally enroll in a PhD to apply Cultural Evolution to study large scale social and economic changes. Meanwhile I worked  in various laboratories, on fields as various as Philogenetic, Neuroscience, Psychology, Evolutionary Robotics or Philosophy of Sciences. The more I learnt, the more the importance of Evolutionary Theory became evident and my genuine inquiry evolved into more concrete questions: 
+Quickly I wanted to find this \emph{right combination of instructions}. To do so I knew I will need to understand the rules of the living things as well as the way to program their artificial counterparts.  This is why I started to study the fields I mentioned before, and finally did a PhD in Cultural Evolution. In parrallel, I worked in various laboratories speciliazed in bacteria's phylogenies, monkey neural system, human psychology, Evolutionary Robotics or Philosophy of Biology. And the more I learnt, the more the importance of Evolutionary Theory became evident and my genuine inquiry evolved into concrete questions: 
 \begin{itemize}
-    \item How various systems made of simple interacting elements, can, based on few rules and without supervision, diversify, adapt and change themselves as well as their environment?
-    \item What are the links between human production (languages, technologies, social organization, computer abstractions) and natural systems? 
+    \item How systems made of simple interacting elements can, based on few rules and without supervision, diversify, adapt and change themselves as well as their environment?
+    \item What's the link between human productions (languages, technologies, social organization) and biological systems? 
     \item Is the fact that artificial tools can be used to understand the complexity of natural systems only the result of a coincidence or does it reflect something more profound on the nature of both things?
 \end{itemize}
-Those questions obviously echo goals already formulated by  Artifical Life, a field of research that inspired me even before going to the university. If they may be abstracts and hardly answerable, they are the one driving my interest and day to day research. 
-Exploring them during the past 8 years led to various publications, each time using computer models to study: cooperation \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}, division of labor and specialisation\cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}, trade in past society \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, evolution of lichens \cite{carrignon2016lichen} or even purely theoretical evolutionary dynamics \cite{medernach2015evolutionary,medernach2016evolution}.
+Those questions echo goals formulated by  Artificial Life, a field of research that inspired me even before going to the University. If they are abstracts and hardly answerable, they are the one driving my day to day research and interest. 
+I spend the past 8 years exploring them using computer simulation and published on different related subject like: cooperation \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}, division of labor \& specialisation\cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult,bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}, trade in past society \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, evolution of lichens \cite{carrignon2016lichen} or even purely theoretical evolutionary dynamics \cite{medernach2015evolutionary,medernach2016evolution}.
+And while doing so I've never seen those questions as well formulated as within the field of Evolutionary Robotics. To illustrate this and explain how I am here, what I learnt on the way and why I apply to this postdoc position, I'm a afraid I have to detail the curriculum I briefly sketched before. This will probably be too long but I will try to summarize it as much as possible without loosing important information.
 
-But I never seen those questions better implemented and tackled than within the field of Evolutionary Robotics. To explain this I would have escribing the path that led me to met Evolutionary Robotics. I hope this  will help to better grasp my profile.
+After my undergraduate study, where I learnt the basics of biology and computer science, I did a Master in Natural \& Artificial Cognition at the ``Ecole Pratique des Hautes Etudes'' in Paris.  There I started to work with Elisabetta Zibetti on a project using robots (Khepera III) to test human heuristics extracted from experimental psychology. Though this was not my first experience in a lab  % While I learnt a lot about the world of research during those two first internships%
+I felt I was going a step closer to the problem I presented at the beginning. When before computers were simple \emph{tools} (powerful calculator for  phylogeneticists, precise controller for neuroscientists), here the robot (and the code controlling it) was more than that; it was a \emph{model} for human cognition, a model that one has to study as a cellular biologist study a mouse. For various reason out of my control this project didn't went well and ended without concrete results. Nonetheless it allowed me to learn a lot about robotics and its reactive school, sensor and motor control,\ldots and to publish with another PhD student protocols and experiments we developed to teach robotics to young children \cite{gaudiello2010representations}.
 
-After 4 years in undergraduate programs where I learnt the basics of biology and computer science, I did a Master in Natural And Artificial Cognition at the ``Ecole Pratique des Hautes Etudes''. This Paris' school aims at teaching research by practice: throughout the master students have to belong to lab where they work full time on a research project. At this epoch, stimulated by my recent discovery of Cognitive Neurosciences, I was looking for someone studying cognition using computers. I found Pr. Elisabetta Zibetti, a researcher associated with my school looking for someone to use robots (Khepera III) to test hypothesis extracted from experimental psychology. I contacted her and she accepted me for an internship.
+In the meantime I discovered Evolutionary Robotics during a class given by Nicolas Bredeche. I realised it was even more close to what I wanted to explore and I decided to finish my Master doing that. Nicolas Bredeche accepted to work with me and we started to collaborate. Together with his PhD student J.-M. Montanier we developed experiments to study the evolution of division of labor in swarm of autonomous agents. Using simple neural networks we left evolving online without direct fitness function on simulated Khepera-like robots we emulated different speciation scenarios inspired by Biology (sympatric vs parapatric). Each scenarios were implemented as different network topologies representing different mating networks. This work was published a few years after my Master in \cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult} and a follow up afterward in \cite{bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}. %At the same time, and with the help of N. Bredeche we took back a project I started with E. Zibetti on the simulation of cooperation that I developed during the first terms of the master and that we published here \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
 
-This was not my first experience in a Lab. During my undergraduate studies I spend 3 month in the LBBE in Lyon with the team of Pr. V. Daubin, where I implemented in C++ algorithms to study bacteria's phylogenies and another 3 month with Pr. Andrea Green in the department of Neuroscience in Montreal, where I developed a GUI to control and synchronize a set of motors and electrophysiological sensors to study the vestibular system in monkeys.  While I learnt a lot about the world of research during those two first internships, I was never doing exactly what I \emph{wanted} to do. Computers here were used as 'tools': a powerful calculator in phylogenetics and a precise and centralized controller in neuroscience. In the team of E. Zibetti, it was different and a step closer to my original questions: the robot and the code controlling it were not anymore just 'tools', but a 'model' for human cognition, a model that need to be studied the same way a mouse is studied in a cellular biology's lab.
+Then, convinced that Evolutionary Robotics was the best way to study the questions I presented at the beginning of this letter (and some other that we developed here \cite{bredeche11evolutionaryadaptationpopulationrobots}),  I decided to do a master in History and Philosophy of Science. My goal: get a  better understanding of the fundamental implication of our work. And while learning the history of Evolutionary Biology and the limits of applying computer models to study it, I wrote a thesis on ``Evolutionary Robotics as a model to study Evolutionary Biology''.  I then came back to N. Bredeche with whom we unsuccessfully tried to fund a PhD in Evolutionary Robotics. As I was not in the best financial position to wait more at this moment, I accepted the proposition made by J.M. Montanier to join his team as a PhD student at the Barcelona Supercomputing Center were he had moved for a postdoc meanwhile.
 
-For various reason this didn't went as well as expected: left alone as the main \emph{specialist} although I had never programmed robots before, remotely supervised by a postdoc that left the project after one year, I had to learn alone and sadly, though I finished the JAVA API I was supposed to do to control the Khepera, the algorithm controller supposed to be developed by the postdoc from human heuristic was never done. On a positive side, we developed in parallel protocols and experiments to teach robotic to young children, and this led to the creation of an association (``l'Academie du Robot'') and the publication of \cite{gaudiello2010representations}.
+The topic of the project I joined may look far from Evolutionary Robotics, this ERC wanted to ``build formal model able to support a critical and alternative exploration of the Roman trade network'', but in practice, the methods were the same (and this is why JM. Montanier went there and convinced me to go). I spend the last 4 years developing and testing agent based model implementing evolutionary dynamics and game theory model  \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}. 
 
-Meanwhile I discovered Evolutionary Robotic during a 3 hours class on Artificial Life given by  Nicolas Bredeche at my school. I realised that his work and research methods was what I really wanted to do. Thus, the following
-year, I enrolled for the class given by N. Bredeche and Philippe Tarroux `` Machine Learning, Evolutionary Optimization, Autonomous Robotics and Artificial Life'' at the university Paris-Sud\footnote{My school was actively encouraging us to follow lesson in other establishment}. It became clear to me that this was what I wanted to do. In this context I was not anymore the ``specialist'' but surrounded by  more qualified students in computer science on which I could count to exchange and learn a lot. Even if I was afraid that my level in computer science may not be high enough, I decided to speak with N. Bredeche to tell him I wanted to work with him on Evolutionary Robotics to study evolutionary dynamics. And luckily he accepted.
+One important thing changed though: when starting to work with historical and archaeological dataset and theories, the link between models and data became much more central. Where there is no strong theories nor consensus to guide what can be modeled and how, data is the only thing against which models can be tested. Unfortunately, in History, the relation between this data and the agent's behavior is far from being direct: the archaeological records is only very partially related to the original behavior. Moreover, dataset are heavily biased, sparse and noisy. Thus it is extremely difficult to have clear cut test to validate the models. 
 
-I worked during 6 month with him in the LRI team in Orsay to finish my Master and afterward. Together with his then PhD student Jean-Marc Montanier we developed experiments to study the evolution of division of labor in swarm of autonomous agents. Our main objective was to explore what properties of the reproductive network permit the emergence of division of labor. To do so we used simple neural network, evolving online on simulated khepera-like robots, and testing different interaction through various network topoligies that were emulating different case of speciation (sympatric vs parapatric). This work was finally published few years after my Master in \cite{montanier2016behavioralspecializationinembodiedevolutionaryroboticswhysodifficult} with a follow up afterward in \cite{bredeche2017benefitsofproportionateselectioninembodiedevolutionacasestudywithbehaviouralspecialization}. At the same time, and with the help of N. Bredeche we took back a project I started with E. Zibetti on the simulation of cooperation that I developed during the first step of the master taht we published  here \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
+This brought me to Approximate Bayesian Computation, a method that allows to compute the likelihood of any model given an \emph{a priori} knowledge and data. It is already widely used by Evolutionary Biologists to compare and select different competing scenarios to explain the actual distribution of genes \cite{beaumont2009adaptiveapproximatebayesiancomputation} and has been more recently successfully used to explain the socio-cultural history of human civilisations \cite{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation,kandler2017inferringindividuallevelprocessesfrompopulationlevelpatternsinculturalevolution}. My actual PhD follow this path, using more precisely defined model that integrate game theory and cognitive psychology. 
 
-At the end of this Master I wasn't sure if I wanted to apply for a PhD yet and other doubt have grown. If our work was supposed to give the key for engineers to design swarm of robots with specialised subgroups, I had the intuition, shared wit my coworkers that we were explaining much more than that. We expressed some of those though in \cite{bredeche11evolutionaryadaptationpopulationrobots} but I was (at a personal level) often still not confident when I needed to justify them outside of the Evolutionary Robotic and Alife communities.
+Some of the last thing I did related to this are not yet publish but most of the code is already available online and has been presented in conferences:
+\begin{itemize}
+    \item \href{https://github.com/simoncarrignon/apemcc}{APEMCC}: A python model to study the change in pottery production techniques (presentation: \cite{COTOSARMIENTO2018}).
+    \item \href{http://framagit.org/sc/twitter-spread/}{TWITTER-SPREAD}: A R model and ABC wrapper to study the spread of true and false information on online social media (presentation: \cite{carrignon2018}).
+    \item \href{https://framagit.org/sc/abc-pandora}{CEEC-JERASH}: A python wrapper to use ABC methods with on a modified version of \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} to explore change in ceramics use in the Roman East from 25BC to 170AD (presentation: \cite{carrignon2018abmtrac}).
+\end{itemize}
 
-That's why I decided to go for another master in History and Philosophy of Science. There I learnt in more depth the history and development of Evolutionary Biology since Darwin to nowadays. I understood better the philosophical debates that occurred throughout this history and the limits and the strength of applying computer model to understand it. I also had the chance to spend again 6 month in Montreal, with Frédéric Bouchard, Philosopher of Biology, that teach me a lot about how subtle and fragile are some concept, often given as granted by Biologist, such as individual, species, etc\ldots The definitely convinced me that 1/ I wanted to stay in academia and 2/Evolutionary Robotics was one of the best way for me to do what I wanted to do.
+Now that the end of my PhD is near I would love to come back to Evolutionary Robotics with my new baggage. If working on historical questions is great, as it questions our own past and offers hint on our own future, the degree of incertitude, though challenging, is often frustrating and can lead to weak conclusion. Moreover, the interdisciplinarity is not well developed yet. Various fields interact with incompatible objectives. Communication is difficult and the resolution of problem sometime impossible. In Evolutionary Robotics, since the first experiments at the beginning of the 90s and the explosion of the field in the early 00s, a great community with a coherent multi-disciplinary background has grown. People may have divergent opinions, they still share common views and great part of their background. This create an ideal context to work and develop good research.
 
-After defending this second master thesis I came back to  N. Bredeche to try to find funding for my PhD. We tried one unsuccessful tentative with Pr. Laurent Keller to work on ``In silico experimental evolution of the division of labour'' and again with J.-B. André and J.-B. Mouret to work on ``The evolution of learning using evolutionary robotics and simulation'' where this time a school accepted the project but could not offer us funding. As financially it started to be complicated whem J.M. montanier, former PhD student of N. Bredeche contacted me to rpopose a PhD position in Barcelona, accepted.
+However this doesn't mean I don't want to work anymore on those topics. I even think that Evolutionary Robotics is the perfect empirical playground where Cognitive and Evolutionary Theory can meet and be studied to solve problem that Cultural Evolution is facing.
 
-
-This is what I focused on during my PhD. As I started working with historical and archaeological dataset and theories, the link between models and data became more and more important. As there is no strong theories nor consensus to guide what can be modeled and how, keeping this link is the only way to built meaningful models. The data (archaeological or historical) is the only thing against which models can be tested. But there is no way to make direct link between those data and the implemented agents in the model: those data are heavily biased, sparse and noisy. 
-
-To achieve this I started using Bayesian Inference. More precisely: Approximate Bayesian Computation. This method allows to use any kind of models, compute their likelihood to be true given an \emph{a priori} knowledge and a dataset. Evolutionary Biologists have shown how to use it to compare and select different competing scenarios to explain the actual distribution of genes \cite{beaumont2009adaptiveapproximatebayesiancomputation}, and it has been recently demonstrate how they are extremely valuable to explain socio-cultural history of human civilisations \cite{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation,kandler2017inferringindividuallevelprocessesfrompopulationlevelpatternsinculturalevolution}.
-
-But now that the end of my PhD is near I would love to come back to work in Evolutionary Robotics, and this for various reason.  1st of all the degreen ofRDSendLinethe degreee of intersiciplinarity is big. too big. unsolvable. 2 the. If it s beeen a while since since the last time I work in a full evolutionary robotics environmen I still kept link with it. I had to run simulation for the last paper we di wiht Nicolas Bredeche.  THE RALITY GAP IS NOT FUNNI HERE. we cannot quantify it, nothing. No THING and I am alone. It's hard to be alone. Where ER is the perfect playground where cognitive science and evolution can meet to be studied as drosophiles.
-
-I am well aware of the limits of my candidature. I haven't worked in the field for some years and obviously have less publications on the topic that any PhD student that stayed in the field. Nonetheless I think and hope that my background that I tried to describe here will illustrate that I can propose new and innovative ideas, firmly grounded epistemologically. 
-
-Technically too, I guess my profile may be less interesting that the profile of a 'pure' engineer or computer scientist, with a master degree in those discipline.  Nonetheless I am still writing my main models in C++ (so is the one of \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}, I write lot of python and have more than 6 years working daily with grid and supercomputers, running bash and python scripts to manage, store and  explore my simulation, while using fluently R to statistical analysis and visualisation of the analyses. If it's also been a while since I haven't worked directly with physical Robots, I still work on my own projects, involved raspberry pi, sensors, cameras and self-hosted servers.
-
-At the same time I was alwasy connect with alife and animated postdcas with my friend and co-authors david Medernach here: 
+On another totally different hand, I always stayed connected with the Alife community and Evolutionary Robotics. With my friend David Medenerach, with who we studied evolution of cellular automata \cite{medernach2015evolutionary,medernach2016evolution} we animate a \href{www.vie-artificielle.com}{podcast} on those topics, in which I mostly spoke about Evolutionary Biology and Evolutionary Robotics. We still work on new episodes and recently participated to a collective book ``La science à contrepieds'' where we wrote a short introduction to  Artificial Life and recorded a \href{https://www.youtube.com/watch?v=HBhrmlXNqM4}{video} (all podcast and video are in French).
 
 
-%Using that method, and thanks to highly qualified Archaeologist and Historian and supercomputing architecture,  I was finally able to loop through the full circle of knowledge production, in a way that looked much similar to what traditional experimental science is doing: from the proposal and formulation of hypotheses, to the preparation of an experimental setup to test, compare and reject and them with regard to known evidences. Most of the recent work I did, and my full PhD go in that direction. Most is still to be published but have been subject of various talks and posters \cite{coto2016exploringamphorabetica,carrignon2018abmtrac,romanowska2018jerash,carrignon2017impactofdifferentsociallearningmechanismsontheemergenceofawalrasianequilibrium,carrignon2018hpcmodel,carrignon2018}. 
-%
-%I have now a fully functional framework based on computer models as powerful tools to explore various range of phenomena that cannot be tested through experimental or analytical exploration, with evolutionary theories as a reference within which implement and interpret those models, and Bayesian Inference to statistically test, compare and select them given known datasets and evidences.
-%
+All that been said, I am well aware of the limits of my candidature. I haven't worked in the field for some years and obviously have less related publications that any PhD student that stayed. Nonetheless I think and hope that my detailled background can illustrate how I still fit in, and how I can bring interesting new perspective firmly grounded epistemologically. Technically too, I guess my profile may be less interesting that the profile of a 'pure' engineer or computer scientist with a master degree in those discipline.  Nonetheless I am still writing my main models in C++ (so is the one of \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties}), I also write python models and have more than 6 years of experience working daily with grid and supercomputers, running bash and python scripts to manage, store and  explore millions of simulation while using fluently R to analyse and visualise the results. If it's also been a while since I haven't worked directly with physical Robots, I still work on my own projects that involve some raspberry pies, sensors, cameras and self-hosted servers.
 
-%A first work on the theoretical eexploration of led to a paper \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments} on the evolution of cooperation,
+Most of the code I write is split between \url{github.com/simoncarrignon} and \url{framgit.org/sc}, I already gave the main repositories but I will be more than happy to share anything else needed. 
 
-%They led me to a Master Degree in Natural \& Artificial Cognition, in which I worked on the evolution of division of labor in swarm of autonomous agents. The main idea was to explore what are the properties of the reproductive network that permit the emergence such division of labor. Those work are still ongoing and will soon be published. In parallel I studied the same kind of mechanisms but in simulated ‘cognitive’ agents designed with psychologists. The idea here was to explore  what kind of environmental conditions allow subpopulation of cooperative agents to co-exist with populations of selfish individual. This work has been published few months ago \cite{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments}.
-%
-%
-%In both case the results I found were valuable as themselves for me and provided a new understanding about crucial evolutionary processes in totally different contexts. But to convince people that this knowledge could be applied to real world entities and that it was valuable for the understanding of the world in general was not as straightforward. I realize that if I wanted myself to be able to produce meaningful, useful and concrete research projects and moreover if I wanted to be able to make the link between such projects and what more ‘traditional’ scientists were doing, I would need a deep understanding of the tool I use, the subject I study and the link between them. 
-%s
-%That decided me to engage myself in another Master Degree in History and Philosophy of Science. My work then focused on exploring what is the nature of evolutionary processes and how we can study them using computers. It allowed me to learn precisely the history and the construction of Evolutionary Biology since Darwin and to dig deeper in the philosophical debates that occurred throughout this history. I took also this opportunity to diversify the nature of the systems I wanted to study: I created the LaReMI Junior lab (http://en.laremi.net/), financially supported by the Ecole Normal Superieur (Lyon France) with the idea of applying similar approach (simulation coupled with simple cognitive experiments) to study the evolution of music melodies. It was my first contact with what is called ‘cultural evolution’, but moreover it allowed us to organize an international workshop on the topic in Lyon (http://en.laremi.net/actvity/meeting\footnote{Regarding to the auto-hosting solution we adopt for our server, the loading of those pages could take time}) and to present our approach to the community in Lisbon \cite{carrignon2013whyapply}.
-%
-%After those two complementary Masters, I pursued the exploration of such questions in the scope of my PhD. The idea here is still to use simulation to try to understand the conditions of evolution of particular dynamics in a decentralized system. This time I choose to study the evolution of cultural and economic network during the Roman Empire. An historical question about a human activity in a project \footnote{ERC grant EPNET: www.roman-ep.net} involving historians, archaeologists as well as database specialists. My work focus on trying to understand the conditions of the emergence of a decentralized market. The main goal is to provide tools to measure if such conditions were satisfied during the Roman period and if not, what kind of economy we should expect to find. To do so I developed a simple cultural evolution simulation where cultural transmission mechanisms lead to economical changes, that in turn modify the cultural dynamics. Right now I am exploring what kind of properties the cultural network need to exhibit in order that a stable decentralized economy evolved and I already presented the computational framework at the Winter Simulation Conference \cite{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties} and I will present the first results we obtains with the networks in Oslo.
+It would also be my pleasure to answer any aditional question or precise any unclear point.\\
 
-
-
-%In every projects I worked I saw how mature such approach is getting. Trying to understand decentralized and unsupervised evolving system \emph{per se} is providing knowledge in a wide range of different area. It is not anymore a marginal object of distraction for curious scientist. With new generation of physicists, biologists, sociologists, economists and even historians who learn such methods, concrete hypotheses are formulated and can be tested. With computer and program always more powerful, and with scientist like me with a strong transdisciplinary background, a high expertise and able to make the link between the questions, the methods and the results, new discovery can be made about topic that were even unthinkable before. 
-%
-%This gives us a wide open area of research where a lot remains to do.  I will continue to explore it. Among other things, I will continue to explore the networks' properties that allow systems to evolve properties such as cooperation, division of labor, specialization\ldots but I want to understand how such networks can evolve. Another huge track of research I want to pursue is to study in what extend the evolution of those properties depend on the abilities of the system to interact with its environment (using developmental mechanism, simple learning, cultural transmission,\ldots). 
-%
-%In any case my main concern is to tighten the link between what I am doing, the empirical data and the scientists working to try to extract meanings from those data. To do so I will continue to work with people from different field but with concrete, real and complex case study. Because I think that the most valuable and beautiful striking knowledge don't lie in computational simulation we can do or in the mathematical model we extract from it, neither in the simple analysis of the raw data and the description of such analysis, but emerge from the well articulation of both side.
+\vspace{.2cm}
+\noindent Cordially,\\
+Simon Carrignon
 
 
 \bibliographystyle{unsrt}
