[BIB] remove duplicate and update some badly writen author names

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -2,7 +2,7 @@
 
 @article{foote2016genomeculturecoevolutionpromotesrapiddivergenceofkillerwhaleecotype,
 	abstract = "Analysing population genomic data from killer whale ecotypes, which we estimate have globally radiated within less than 250,000 years, we show that genetic structuring including the segregation of potentially functional alleles is associated with socially inherited ecological niche. Reconstruction of ancestral demographic history revealed bottlenecks during founder events, likely promoting ecological divergence and genetic drift resulting in a wide range of genome-wide differentiation between pairs of allopatric and sympatric ecotypes. Functional enrichment analyses provided evidence for regional genomic divergence associated with habitat, dietary preferences and post-zygotic reproductive isolation. Our findings are consistent with expansion of small founder groups into novel niches by an initial plastic behavioural response, perpetuated by social learning imposing an altered natural selection regime. The study constitutes an important step towards an understanding of the complex interaction between demographic history, culture, ecological adaptation and evolution at the genomic level.",
-	author = "{Foote, Andrew D.} and {Vijay, Nagarjun} and {Avila-Arcos, Maria C.} and {Baird, Robin W.} and {Durban, John W.} and {Fumagalli, Matteo} and {Gibbs, Richard A.} and {Hanson, M. Bradley} and {Korneliussen, Thorfinn S.} and {Martin, Michael D.} and {Robertson, Kelly M.} and {Sousa, Vitor C.} and {Vieira, Filipe G.} and {Vinar, Tomas} and {Wade, Paul} and {Worley, Kim C.} and {Excoffier, Laurent} and {Morin, Phillip A.} and {Gilbert, M. Thomas P.} and {Wolf, Jochen B.W.}",
+	author = "{Foote, Andrew D.} and {Vijay, Nagarjun} and {Avila-Arcos, Maria C.} and {Baird, Robin W.} and {Durban, John W.} and {Fumagalli, Matteo} and {Gibbs, Richard A.} and {Hanson, M. Bradley} and {Korneliussen, Thorfinn S.} and {Martin, Michael D.} and {Robertson, Kelly M.} and {Sousa, Vitor C.} and {Vieira, Filipe G.} and {Vinar, Tomas} and {Wade, Paul} and {Worley, Kim C.} and Excoffier, Laurent and {Morin, Phillip A.} and {Gilbert, M. Thomas P.} and {Wolf, Jochen B.W.}",
 	doi = "10.1038/ncomms11693",
 	journal = "Nat Commun",
 	localfile = "../pdfs/foote2016genomeculturecoevolutionpromotesrapiddivergenceofkillerwhaleecotype.pdf",
@@ -693,7 +693,7 @@
 
 @article{yasuda1974theevolutionofsurnamesananalysisoftheirdistributionandextinction,
 	abstract = "Surname distribution and evolution can be analyzed by a theory put forward for neutral mutation by Karlin and McGregor. This theory allows us to predict the distribution of surnames, and to predict immigration on the basis of knowledge of population size, and of the total number of different surnames or, in lieu of the latter, a quantity known as random isonymy. Another approach allows us to predict probabilities of extinction after any number of generations and various sets of conditions. The predictions of these theories have been tested successfully on a number of empirical data from the Upper Parma Valley.",
-	author = "Yasuda, N. and Cavalli-Sforza, L.L. and Skolnick, M. and Moroni, A.",
+	author = "Yasuda, N. and Cavalli-Sforza, Luigi Luca and Skolnick, M. and Moroni, A.",
 	doi = "10.1016/0040-5809(74)90054-9",
 	issn = "0040-5809",
 	journal = "Theoretical Population Biology",
@@ -750,24 +750,6 @@
 	urldate = "2014-09-15",
 	volume = "39",
 	year = "2008"
-}
-
-@article{bentley2005specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork,
-	author = "Bentley, R. Alexander and Lake, Mark W. and Shennan, Stephen J.",
-	doi = "10.1016/j.jas.2005.03.008",
-	file = "Bentley et al. - 2005 - Specialisation and wealth inequality in a model of.pdf:/home/simon/.mozilla/firefox/hbd7she8.default-1398248423370/zotero/storage/F69S7RGD/Bentley et al. - 2005 - Specialisation and wealth inequality in a model of.pdf:application/pdf",
-	issn = "03054403",
-	journal = "Journal of Archaeological Science",
-	language = "en",
-	localfile = "../pdfs/bentley2005specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork.pdf",
-	month = sep,
-	number = "9",
-	pages = "1346--1356",
-	title = "{Specialisation and wealth inequality in a model of a clustered economic network}",
-	url = "http://linkinghub.elsevier.com/retrieve/pii/S0305440305000725",
-	urldate = "2014-09-15",
-	volume = "32",
-	year = "2005"
 }
 
 @article{turchin2008arisecliodynamics,
@@ -1511,7 +1493,7 @@
 }
 
 @book{bouchard2013groups,
-	author = "Bouchard, F. and Huneman, P.",
+	author = "Bouchard, Fr{\'e}d{\'e}ric and Huneman, P.",
 	isbn = "9780262018722",
 	lccn = "2012029291",
 	publisher = "MIT Press",
@@ -1837,14 +1819,6 @@
 	year = "2010"
 }
 
-@book{okasha2006evolution,
-	author = "Okasha, Samir",
-	publisher = "Clarendon Press Oxford",
-	title = "{Evolution and the levels of selection}",
-	volume = "16",
-	year = "2006"
-}
-
 @article{hou2010energeticbasisofcoloniallivinginsocialinsects,
 	abstract = "Understanding the ecology and evolution of insect societies requires greater knowledge of how sociality affects the performance of whole colonies. Metabolic scaling theory, based largely on the body mass scaling of metabolic rate, has successfully predicted many aspects of the physiology and life history of individual (or unitary) organisms. Here we show, using a diverse set of social insect species, that this same theory predicts the size dependence of basic features of the physiology (i.e., metabolic rate, reproductive allocation) and life history (i.e., survival, growth, and reproduction) of whole colonies. The similarity in the size dependence of these features in unitary organisms and whole colonies points to commonalities in functional organization. Thus, it raises an important question of how such evolutionary convergence could arise through the process of natural selection.",
 	author = "Hou, Chen and Kaspari, Michael and {Vander Zanden}, Hannah B. and Gillooly, James F.",
@@ -2116,7 +2090,7 @@
 }
 
 @article{pritchard1999populationgrowthofhumanychromosomesastudyofychromosomemicrosatellites,
-	author = "Pritchard, J K and Seielstad, M T and Perez-Lezaun, A and Feldman, M W",
+	author = "Pritchard, J K and Seielstad, M T and Perez-Lezaun, A and Feldman, Marcus W.",
 	doi = "10.1093/oxfordjournals.molbev.a026091",
 	eprint = "/oup/backfile/content\_public/journal/mbe/16/12/10.1093\_oxfordjournals.molbev.a026091/2/mbe1791.pdf",
 	journal = "Molecular Biology and Evolution",
@@ -2316,7 +2290,7 @@
 
 @article{rendell2010whycopyothersinsightsfromthesociallearningstrategiestournament,
 	abstract = "Social learning (learning through observation or interaction with other individuals) is widespread in nature and is central to the remarkable success of humanity, yet it remains unclear why copying is profitable and how to copy most effectively. To address these questions, we organized a computer tournament in which entrants submitted strategies specifying how to use social learning and its asocial alternative (for example, trial-and-error learning) to acquire adaptive behavior in a complex environment. Most current theory predicts the emergence of mixed strategies that rely on some combination of the two types of learning. In the tournament, however, strategies that relied heavily on social learning were found to be remarkably successful, even when asocial information was no more costly than social information. Social learning proved advantageous because individuals frequently demonstrated the highest-payoff behavior in their repertoire, inadvertently filtering information for copiers. The winning strategy (discountmachine) relied nearly exclusively on social learning and weighted information according to the time since acquisition.",
-	author = "Rendell, L. and Boyd, R. and Cownden, D. and Enquist, M. and Eriksson, K. and Feldman, M. W. and Fogarty, L. and Ghirlanda, S. and Lillicrap, T. and Laland, Kevin N.",
+	author = "Rendell, L. and Boyd, Robert and Cownden, D. and Enquist, M. and Eriksson, K. and Feldman, Marcus W. and Fogarty, L. and Ghirlanda, S. and Lillicrap, T. and Laland, Kevin N.",
 	doi = "10.1126/science.1184719",
 	eprint = "http://science.sciencemag.org/content/328/5975/208.full.pdf",
 	issn = "0036-8075",
@@ -2389,7 +2363,7 @@
 }
 
 @book{cavalli1981cultural,
-	author = "Cavalli-Sforza, Luigi Luca and Feldman, Marcus W",
+	author = "Cavalli-Sforza, Luigi Luca and Feldman, Marcus W.",
 	number = "16",
 	publisher = "Princeton University Press",
 	title = "{Cultural transmission and evolution: a quantitative approach}",
@@ -2469,5 +2443,31 @@
 	url = "http://dx.doi.org/10.1093/bioinformatics/btp619",
 	volume = "26",
 	year = "2010"
+}
+
+@article{bentley2005specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork,
+	author = "Bentley, R. Alexander and Lake, Mark W. and Shennan, Stephen J.",
+	doi = "10.1016/j.jas.2005.03.008",
+	file = "Bentley et al. - 2005 - Specialisation and wealth inequality in a model of.pdf:/home/simon/.mozilla/firefox/hbd7she8.default-1398248423370/zotero/storage/F69S7RGD/Bentley et al. - 2005 - Specialisation and wealth inequality in a model of.pdf:application/pdf",
+	issn = "03054403",
+	journal = "Journal of Archaeological Science",
+	language = "en",
+	localfile = "../pdfs/bentley2005specialisationandwealthinequalityinamodelofaclusteredeconomicnetwork.pdf",
+	month = sep,
+	number = "9",
+	pages = "1346--1356",
+	title = "{Specialisation and wealth inequality in a model of a clustered economic network}",
+	url = "http://linkinghub.elsevier.com/retrieve/pii/S0305440305000725",
+	urldate = "2014-09-15",
+	volume = "32",
+	year = "2005"
+}
+
+@book{okasha2006evolution,
+	author = "Okasha, Samir",
+	publisher = "Clarendon Press Oxford",
+	title = "{Evolution and the levels of selection}",
+	volume = "16",
+	year = "2006"
 }
 
